# MikroSoundFont

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml  publish.yaml
.kotlin/metadata/kotlinCInteropLibraries/: core-cinterop-pigpio-PSvS8A.klib
.kotlin/metadata/kotlinTransformedMetadataLibraries/: io.deepmedia.tools.knee-knee-annotations-1.0.0-backendMain-S5_3Yg.klib  io.deepmedia.tools.knee-knee-annotations-1.0.0-commonMain-S5_3Yg.klib  io.deepmedia.tools.knee-knee-runtime-1.0.0-androidNativeMain-lTmKPQ.klib  io.deepmedia.tools.knee-knee-runtime-1.0.0-backendMain-lTmKPQ.klib  org.jetbrains.kotlinx-kotlinx-coroutines-core-1.8.1-nativeOtherMain-XanZ2w.klib
app/: build.gradle.kts
app/src/nativeMain/kotlin/: Main.kt
buildSrc/: build.gradle.kts
core/: build.gradle.kts
core/src/nativeInterop/cinterop/: pigpio.h  tsf.def
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvmApp/: build.gradle.kts
lib/: build.gradle.kts
lib/src/androidMain/cpp/: CMakeLists.txt  mikro_sound_font_jni.c  mikromidi.c
midi/: build.gradle.kts
midi/src/androidInstrumentedTest/assets/: gmajor.mid
native/: libmwc.def  libtsf.def
native/include/: midi_wav_converter.h  wrapper.h
native/include/mwc/: midi_wav_converter.h
native/include/tsf/: tsfCInterop.h
native/src/: tsf.c  tsf.h
plugin/: build.gradle.kts
soundFont/: build.gradle.kts
soundFont/src/androidMain/cpp/: mikro_sound_font_jni.c
soundfont/: build.gradle.kts
tinySoundFont/: build.gradle.kts
(+208 files in other folders)
